# junkNAS

./: .gitignore  Cargo.toml  Makefile  README.md  config.test.json  junknas_fuse  test_config
agent/: Cargo.toml
agent/src/: agent_state.rs  allocation.rs  fs_types.rs  fuse_daemon.rs  main.rs  mesh.rs  nat.rs  peers.rs  transport.rs  wireguard.rs
controller/: Cargo.toml
controller/src/: fs.rs  main.rs  wireguard.rs
dashboard/: Dockerfile  init-dashboard.sh
dashboard/static/: app.js  index.html
deploy/: junknas.yaml
docker/: agent-entrypoint.sh  agent.Dockerfile  controller-entrypoint.sh  controller.Dockerfile  dashboard.Dockerfile
docs/: samba-access.md
include/: config.h  fuse_fs.h  mesh.h  web_server.h
scripts/: install-junknas.sh
src/: config.c  fuse_fs.c  fuse_fs.c.bak  junknas_fuse_main.c  mesh.c  staged-write.patch  test_config.c  test_wireguard.c  web_server.c
