[package]
name = "junknas-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
hostname = "0.4"
dirs = "5"
walkdir = "2"
anyhow = "1"
getrandom = "0.2"
libc = "0.2"
fuse3 = "0.5"
tokio = { version = "1", features = ["full"] }
rmp-serde = "1.3"
once_cell = "1.19"
