[package]
name = "junknas-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
hostname = "0.4"
dirs = "5"
walkdir = "2"
anyhow = "1"
getrandom = "0.2"
libc = "0.2"
tokio = { version = "1", features = ["full"] }
rmp-serde = "1.3"
once_cell = "1.19"
sha2 = "0.10"
async-trait = "0.1"
fuse3 = { version = "0.5", features = ["tokio-runtime"] }
bytes = "1"
futures-util = "0.3"
ctrlc = "3"
base64 = "0.22"
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand = "0.8"
