[package]
name = "junknas-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
base64 = "0.22"
rand = "0.8"
x25519-dalek = { version = "2", features = ["static_secrets"] }
